--- a/php/preferences-php7.4
+++ b/php/preferences-php7.4
@@ -1,27 +1,19 @@
-Package: *yac
+Package: *yac*
 Pin: release *
 Pin-Priority: -1
 
-Package: *gmagick
+Package: *gmagick*
 Pin: release *
 Pin-Priority: -1
 
-Package: *uopz
+Package: *uopz*
 Pin: release *
 Pin-Priority: -1
 
-Package: *horde-groupware
+Package: *psr*
 Pin: release *
 Pin-Priority: -1
 
-Package: *horde-webmail
-Pin: release *
-Pin-Priority: -1
-
-Package: *letodms-lucene
-Pin: release *
-Pin-Priority: -1
-
-Package: *phalcon3
+Package: *phalcon*
 Pin: release *
 Pin-Priority: -1
