--- a/php/preferences-php8.1
+++ b/php/preferences-php8.1
@@ -1,15 +1,19 @@
-Package: *yac
+Package: *yac*
 Pin: release *
 Pin-Priority: -1
 
-Package: *gmagick
+Package: *gmagick*
 Pin: release *
 Pin-Priority: -1
 
-Package: *uopz
+Package: *uopz*
 Pin: release *
 Pin-Priority: -1
 
-Package: *psr
+Package: *psr*
+Pin: release *
+Pin-Priority: -1
+
+Package: *mapScript*
 Pin: release *
 Pin-Priority: -1
